--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Kotlin_Retrofit_Github</string>
-    <string name="loading">Loading...</string>
+    <string name="loading">Loading…</string>
+    <string name="todo">TODO</string>
 </resources>
